relay/db.yml
#relay-db-deployment-with-sc-pvc
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relay-db
  labels:
    app: relay-db
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: relay-db
  template:
    metadata:
      labels:
        app: relay-db
    spec:
      containers:
        - image: postgres
          name: relay-db
          args:
          ports:
            - containerPort: 5432
              protocol: TCP
              name: relay-db-d
          volumeMounts:
            - mountPath: /data
              name: postgres
      restartPolicy: Always
      terminationGracePeriodSeconds: 200
      volumes:
        - name: postgres
          persistentVolumeClaim:
            claimName: postgres-pvc
